<?xml version="1.0"?>

<package format="2">

  <name>anybotics_any_node</name>
  <version>0.5.1</version>
  <description>ROS node wrapper with some convenience functions using *any_worker*.</description>

  <license>BSD</license>

  <author email="pleemann@anybotics.com">Philipp Leemann</author>
  <maintainer email="mickaram@hotmail.com">Mike Karamousadakis</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>anybotics_any_worker</depend>
  <depend>anybotics_message_logger</depend>
  <depend>anybotics_param_io</depend>
  <depend>roscpp</depend>
  <depend>anybotics_signal_handler</depend>

  <test_depend>gtest</test_depend>
<!--   <test_depend>cmake_code_coverage</test_depend> -->
<!--   <build_depend>cmake_clang_tools</build_depend> -->

</package>
